assets/stylesheets/redmine_wysiwyg_editor.css
.jstElements {
  display: none;
}

.jstEditor {
  /* Not "display:none" but this to get the height of the original textarea */
  visibility: hidden;
}

.wysiwyg-editor {
  padding-right: 2px;
}

.wysiwyg-editor-preview p {
  padding: 0;
}

.wysiwyg-editor-tab {
  margin: 1ex 0;
}

.wysiwyg-editor-tab ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.wysiwyg-editor-tab ul li {
  display: inline-block;
  margin-right: 1em;
}

.wysiwyg-editor-tab ul li a.active {
  color: inherit;
  text-decoration: none;
}

/* FIXME: Tool bar style may be broken under certain Redmine themes. */

.mce-tinymce,
.mce-top-part::before {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
}

.mce-listbox button,
.mce-listbox:hover button,
.mce-btn button,
.mce-btn:hover button,
.mce-close,
.mce-close:hover {
  border: none;
  border-radius: 0;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.mce-btn button .mce-ico,
.mce-btn button .mce-caret,
.mce-container .mce-resizehandle .mce-ico {
  padding: 0;
  background-color: transparent;
  font-size: 16px;
  color: #595959;
}

